# desafio_DataOps_2021

./: README.md  extract_zips.py  process_data_to_db.py  pyproject.toml  work_with_the_data.py
csv_brutos/: README
resultados/: resultado_b.xlsx  resultados_a_c.xlsx
